--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     </head>
 
     <body>
-        <script src="calc.js">
-
-        </script>
+        <script src="calc.js"></script>
     </body>
 </html>
